Cancel vanilla behavior if Pathing changes a block (Closes #2) [push]
Re-indent classes